--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
+    "rate-limit-redis": "^3.0.1",
+    "redis": "^4.2.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
