--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/armerillo/ql-task#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -28,7 +29,7 @@
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
     "rate-limit-redis": "^3.0.1",
-    "redis": "^4.2.0",
+    "redis": "^3.1.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
